@@ -6,6 +6,10 @@ Silva changes
   Silva 2.1 (unreleased)
 
     Features added:
+
+      - #200507: ZMI titles now appear for Silva objects.  The title
+        is retrieved from the object's metadata.
+
       - Refactoring functional tests, built SilvaBrowser API for
         basic Silva functional tests.
 
